build(deps): bump the gradle-dependencies group across 1 directory with 18 updates (#56)
* build(deps): bump the gradle-dependencies group across 1 directory with 18 updates

Bumps the gradle-dependencies group with 18 updates in the / directory:

| Package | From | To |
| --- | --- | --- |
| [org.jetbrains.kotlin:kotlin-gradle-plugin](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin:kotlin-test](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin:kotlin-test-junit](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin.android](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin.jvm](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin.plugin.serialization](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin.multiplatform](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [io.ktor:ktor-client-core](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-okhttp](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-content-negotiation](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-serialization-kotlinx-json](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-logging](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-mock](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-okhttp](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-content-negotiation](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-serialization-kotlinx-json](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-logging](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [io.ktor:ktor-client-mock](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [org.jetbrains.kotlin:k