@@ -37,6 +37,21 @@ internal fun Project.configureAndroidLibrary(extension: LibraryExtension) {
                 // Central's canonical endpoint, matching Gradle's mavenCentral() repository.
                 all {
                     it.systemProperty("robolectric.dependency.repo.url", "https://repo.maven.apache.org/maven2")
+                    // Robolectric 4.17 reflects into JDK internals that the module system closes
+                    // off starting with JDK 17; without these opens, tests fail with
+                    // IllegalAccessException from AndroidInterceptors before running.
+                    // https://robolectric.org/getting-started/
+                    it.jvmArgs(
+                        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                        "--add-opens=java.base/java.util=ALL-UNNAMED",
+                        "--add-opens=java.base/java.io=ALL-UNNAMED",
+                        "--add-opens=java.base/java.net=ALL-UNNAMED",
+                        "--add-opens=java.base/java.security=ALL-UNNAMED",
+                        "--add-opens=java.base/java.text=ALL-UNNAMED",
+                        "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                        "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
+                        "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                    )
                 }
             }
         }
